<resources>
    <string name="app_name">Blankcomma</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="titles">
        <item>어린왕자</item>
        <item>누가 내 치즈를 옮겼을까</item>
        <item>Java의 정석</item>
        <item>2015 SSat 대비</item>
    </string-array>
    <string-array name="memos">
        <item>어린왕자 메모</item>
        <item>내치즈를 옮겼을까 메모</item>
        <item>javavvavavavav 메모</item>
        <item>ssat는 ssat와 ssat하는 메모</item>
    </string-array>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title_activity_search_list">SearchListActivity</string>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="save">저장</string>
    <string name="print">출력</string>

    <!-- signup acitivity-->
    <string name="signupbanner">\t 회원가입</string>
    <string name="moreinfobanner">\t 추가정보</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="pass">비밀번호</string>
    <string name="warning">*추가 정보 입력시 더욱 다양한 서비스를 제공받을 수 있습니다.</string>
    <string name="sex">성별</string>
    <string name="age">나이</string>
    <string name="agepicker">연령선택</string>
    <string-array name="agepicker">
        <item>10대 이전</item>
        <item>10대</item>
        <item>20대</item>
        <item>30대</item>
        <item>40대</item>
        <item>50대</item>
        <item>60대 이상</item>
    </string-array>
    <string name="title_activity_main_flow">MainFlowActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
